# SentinelGraph

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
data/metadata/: contract_results.json  dataset_manifest.json  quality_profile.json  split_manifest.json
docs/: BASELINE_REPORT.md  DATA_DICTIONARY.md  DATA_QUALITY_REPORT.md  DATA_SOURCE.md  PROJECT_CHARTER.md  SPLIT_SPEC.md
docs/releases/: v0.1.md  v0.2.md
reports/v0.2/: baseline_metrics.json
src/sentinelgraph/: __init__.py
src/sentinelgraph/data/: __init__.py  contract.py  pipeline.py  provenance.py  quality.py  report.py  schema.py  splits.py
src/sentinelgraph/modeling/: __init__.py  features.py  metrics.py  models.py  report.py  rules.py  train.py
tests/: test_data_contract.py  test_model_features.py  test_model_metrics.py  test_models.py  test_provenance.py  test_schema.py  test_splits.py  test_v01_artifacts.py  test_v02_artifacts.py
