[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinelgraph"
version = "0.1.0"
description = "Production fraud, account-takeover, and risk intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.4,<2",
  "pydantic>=2.0",
]

[project.scripts]
sentinelgraph-data = "sentinelgraph.data.pipeline:main"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinelgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: validates generated v0.1 artifacts when they are present",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
