[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinelgraph"
version = "0.2.0.dev0"
description = "Production fraud, account-takeover, and risk intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.4,<2",
  "joblib>=1.4,<2",
  "numpy>=2.0,<2.4",
  "pydantic>=2.0",
  "scikit-learn>=1.7,<2",
]

[project.scripts]
sentinelgraph-data = "sentinelgraph.data.pipeline:main"
sentinelgraph-baselines = "sentinelgraph.modeling.train:main"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinelgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: validates generated v0.1 artifacts when they are present",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["joblib", "sklearn.*"]
ignore_missing_imports = true
